--- a/style.css
+++ b/style.css
@@ -204,3 +204,126 @@ header div {
   width: 4rem !important;
   height: 4rem !important;
 }
+
+.saque {
+  color: black;
+}
+.container {
+  margin: 20px 3%;
+  color: white;
+}
+
+
+.wrapperOption {
+  display: flex;
+  justify-content: space-between;
+}
+
+.option {
+  width: 48%;
+  border-radius: 8px;
+  height: 90px;
+  align-items: center;
+  gap: 5px;
+  justify-content: center;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  background-color: rgb(172, 172, 172);;
+}
+
+.option.selected {
+  background-color: #10c41f;
+  color: white;
+}
+
+.sobre {
+  padding: 40px 3%;
+}
+
+.flex {
+  display: flex;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.saque input {
+  background-color: transparent;
+  color: white !important;
+  font-weight: bold;
+  border: 2px solid rgb(214, 214, 214);
+  border-radius: 10px;
+  width: 100%;
+  margin: 10px 0px;
+  padding: 10px;
+  font-size: 15px;
+}
+
+.btn {
+  background-color: #807c7c !important;
+  color: white !important;
+  font-weight: bold;
+  width: 100%;
+  border: 1px solid rgb(95, 95, 95) !important;
+}
+
+
+.pop {
+  width: 100%;
+  height: 100%;
+  position: fixed; 
+  top: 0;
+  left: 0; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  background-color: rgba(0, 0, 0, 0.473);
+}
+
+.pop-out-foto {
+  border: 0px;
+  background-color: white;
+  color: black; 
+  padding: 10px 0; 
+  text-align: center; 
+  width: 90%; 
+  border-radius: 8px;
+  font-size: 13px;
+  margin-top: -20%;
+}
+
+.pop-out-foto img{
+  width: 150px;
+}
+
+
+
+.btn-pop-out-foto {
+  display: flex;
+  background-color: #9D52F4;
+  width:  90%;
+  height: 40px;
+  margin: 0 auto;
+  border-radius: 10px;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  font-weight: 500;
+  color: white;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  animation: pulse infinite 2s;
+  font-weight: bold;
+}
